# I.W.-for-Infected-World

./: I.W. for Infected World.sln
I.W. for Infected World/: CMakeLists.txt  I.W. for Infected World.vcxproj  I.W. for Infected World.vcxproj.filters
I.W. for Infected World/code files/: main.cpp
I.W. for Infected World/code files/entities/: Entity.cpp  Entity.h  LivingEntity.cpp  LivingEntity.h  MoveableEntity.cpp  MoveableEntity.h
I.W. for Infected World/code files/game managing/: GameManager.cpp  GameManager.h
I.W. for Infected World/code files/map/: Map.h
I.W. for Infected World/code files/memory Utils/: DeltaTime.h  VectorTextureWrapper.h  random.h
I.W. for Infected World/code files/time utils/: CoolDown.h  VisualCoolDown.h
I.W. for Infected World/code files/umbrella headers/: GunComponents.h  MapComponents.h  Math.h  memory.h  sfml.h
I.W. for Infected World/code_files/: main.cpp
I.W. for Infected World/code_files/entities/: Entity.cpp  Entity.h  LivingEntity.cpp  LivingEntity.h  MoveableEntity.cpp  MoveableEntity.h
I.W. for Infected World/code_files/game_managing/: GameManager.cpp  GameManager.h
I.W. for Infected World/code_files/map/: Map.cpp  Map.h
I.W. for Infected World/code_files/memory Utils/: VectorTextureWrapper.h  random.h
I.W. for Infected World/code_files/time utils/: CoolDown.h  VisualCoolDown.h
I.W. for Infected World/code_files/umbrella headers/: GunComponents.h  MonsterComponents.h  memory.h  sfml.h
I.W. for Infected World/other dependencies/SMFL/: How to configure SFML 3.txt
(+50 files in other folders)
